--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "coffee-script": "~1.6.3",
     "underscore": "~1.4.4",
     "uglify-js": "~2.3.6",
-    "clean-css": "~1.0.10"
+    "clean-css": "~1.0.10",
+    "less": "~1.4.0"
   },
   "devDependencies": {
     "mocha": "~1.11.0",
