--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "underscore": "~1.4.4",
     "uglify-js": "~2.3.6",
     "clean-css": "~1.0.10",
-    "less": "~1.4.0"
+    "less": "~1.4.0",
+    "mkdirp": "~0.3.5",
+    "rimraf": "~2.2.0"
   },
   "devDependencies": {
     "mocha": "~1.11.0",
