--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "clean-css": "~1.0.10",
     "less": "~1.4.0",
     "mkdirp": "~0.3.5",
-    "rimraf": "~2.2.0"
+    "rimraf": "~2.2.0",
+    "jade": "~0.35.0"
   },
   "devDependencies": {
     "mocha": "~1.11.0",
